<resources>
    <string name="app_name">Just Java</string>
    <string name="customer">Customer</string>
    <string name="customer_hint">Your Name …</string>
    <string name="toppings">Toppings</string>
    <string name="whipped_cream">Whipped cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="quantity_number">0</string>
    <string name="price">Price</string>
    <string name="order">Order</string>
    <string name="order_summary">Order Summary</string>

    <string name="plus">+</string>
    <string name="minus">-</string>
</resources>
